# oogo

./: .gitignore  AUTHORS  COPYING  ChangeLog  Makefile.am  README  README.md  autogen.sh  configure.ac  example_test.go  oogo.cpp  oogo.h  oogo_c.cpp  oogo_c.go  oogo_c.h  oogo_c_test.cpp  oogo_c_test.go
liboogo/: Makefile.am  liboogo.sln  liboogo.vcxproj  liboogo.vcxproj.filters  main.cpp  oogo.cpp  oogo_c.cpp  oogo_c_test.cpp  oogo_t.vcxproj  oogo_t.vcxproj.filters
