dnl Process this file with autoconf to produce a configure script.

AC_PREREQ(2.59)
AC_INIT(liboogo, 1.0.0)

AC_CANONICAL_SYSTEM
AM_INIT_AUTOMAKE()
AC_CONFIG_MACRO_DIR([m4])
LT_INIT

AC_PROG_CC
AC_PROG_CXX
AC_PROG_LIBTOOL
AC_CONFIG_HEADERS(config.h)
AC_CONFIG_FILES(Makefile liboogo/Makefile)
AC_OUTPUT

